# devincar_project

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py
app/core/: __init__.py
app/core/config/: __init__.py  settings.py
app/core/execution_time/: __init__.py
app/data/: camionete.json  carro.json  moto_triciclo.json  transferencias.json  veiculos.json
app/entities/: __init__.py
app/entities/camionete/: __init__.py
app/entities/carro/: __init__.py
app/entities/database/: __init__.py
app/entities/moto_triciclo/: __init__.py
app/entities/transferencias/: __init__.py
app/entities/veiculos/: __init__.py
app/menu/: __init__.py
app/menu/design/: __init__.py
