[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["rafatellescarneiro <rafatellescarneiro@gmail.com>"]
packages = [
    { include = "app" }
]

[tool.poetry.scripts]
start = "app:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
